infa/k8s/kafka.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-broker0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
      id: "0"
  template:
    metadata:
      labels:
        app: kafka
        id: "0"
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:5.4.5
          ports:
            - containerPort: 9092
