infa/k8s/zookeeper.deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: zookeeper-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper-1
  template:
    metadata:
      labels:
        app: zookeeper-1
    spec:
      containers:
        - name: zookeeper1
          image: confluentinc/cp-zookeeper:5.4.5
          ports:
            - containerPort: 2181
