infa/k8s/deliveries-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: deliveries-api
  name: deliveries-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deliveries-api
  template:
    metadata:
      labels:
        app: deliveries-api
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
        - image: tccpucbernardogomes.azurecr.io/tcc_deliveries_api:0.0.6
          # - image: tcc_deliveries_api:0.0.6
          name: deliveries-api
          ports:
            - containerPort: 8000
              name: deliveries-api
---
kind: Service
apiVersion: v1
metadata:
  name: deliveries-api-service
  annotations:
    prometheus.io/scrape: "true"
spec:
  type: LoadBalancer
  selector:
    app: deliveries-api
  ports:
    - port: 8000
