infa/k8s/deliveries-postgresql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deliveries-api
spec:
  selector:
    matchLabels:
      app: postgres-deliveries-api
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres-deliveries-api
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
        - name: postgres
          image: postgres:13
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresdb
      volumes:
        - name: postgresdb
          persistentVolumeClaim:
            claimName: postgres-deliveries-api-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: postgres-deliveries-api
spec:
  selector:
    app: postgres-deliveries-api
  ports:
    - port: 5432
  type: ClusterIP
