infa/k8s/kafka.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  labels:
    name: kafka
spec:
  ports:
    - port: 19092
      name: kafka-port
      protocol: TCP
  selector:
    app: kafka
    id: "0"
  type: LoadBalancer
