infa/k8s/legacy-system.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: legacy-system
  name: legacy-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: legacy-system
  template:
    metadata:
      labels:
        app: legacy-system
    spec:
      containers:
        - image: tcc_legacy_system:0.0.4
          name: legacy-system
          ports:
            - containerPort: 8000
              name: main
---
kind: Service
apiVersion: v1
metadata:
  name: legacy-system-service
spec:
  selector:
    app: legacy-system
  ports:
    - port: 8000
