infa/k8s/partner-routes-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: partner-routes-api
  name: partner-routes-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: partner-routes-api
  template:
    metadata:
      labels:
        app: partner-routes-api
    spec:
      containers:
        - image: tcc_partner_routes_api:0.0.2
          name: partner-routes-api
          ports:
            - containerPort: 8000
              name: main
---
kind: Service
apiVersion: v1
metadata:
  name: partner-routes-api-service
spec:
  selector:
    app: partner-routes-api
  ports:
    - port: 8000
