infa/k8s/partner-routes-postgresql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-partner-routes-api
spec:
  selector:
    matchLabels:
      app: postgres-partner-routes-api
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres-partner-routes-api
    spec:
      containers:
        - name: postgres
          image: postgres:13
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresdb
      volumes:
        - name: postgresdb
          persistentVolumeClaim:
            claimName: postgres-partner-routes-api-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: postgres-partner-routes-api
spec:
  selector:
    app: postgres-partner-routes-api
  ports:
    - port: 5432
  type: ClusterIP
