infa/k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/foo"
            backend:
              service:
                name: foo-service
                port:
                  number: 5678
          - pathType: Prefix
            path: "/bar"
            backend:
              service:
                name: bar-service
                port:
                  number: 5678
          - pathType: Prefix
            path: "/deliveries-api"
            backend:
              service:
                name: deliveries-api-service
                port:
                  number: 8000
          - pathType: Prefix
            path: "/partner-routes-api"
            backend:
              service:
                name: partner-routes-api-service
                port:
                  number: 8000
---
